--- a/src/meson.build
+++ b/src/meson.build
@@ -8,6 +8,7 @@ gnome_mines = executable ('gnome-mines',
                             'minefield.vala',
                             'minefield-view.vala',
                             'tile.vala',
+                            'solvable.c',
                             'theme-selector-dialog.vala'] + resources,
                           dependencies: [ glib_dep,
                                           gee_dep,
