--- a/data/org.gnome.SolvableMines.desktop.in
+++ b/data/org.gnome.SolvableMines.desktop.in
@@ -1,14 +1,14 @@
 [Desktop Entry]
-Name=Mines
+Name=Solvable Mines
 Comment=Clear hidden mines from a minefield
-Exec=gnome-mines
+Exec=solvable-mines
 # Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=org.gnome.Mines
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;Game;LogicGame;
 # Translators: Search terms to find this application. Do NOT translate or localize the semicolons! The list MUST also end with a semicolon!
-Keywords=minesweeper;
+Keywords=minesweeper;solvable;
 StartupNotify=true
 Actions=Small;Medium;Big;
 
